# WhiteBoard

./: .gitignore  CMakeLists.txt  README.md  main.cpp
src/: Canvas.cpp  Canvas.h  Editor.cpp  Editor.h  Palette.cpp  Palette.h
